--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -39,6 +39,7 @@ httpx==0.27.2
 idna==3.10
 ipykernel==6.29.5
 ipython==8.29.0
+ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.4
@@ -56,6 +57,7 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.2.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
 keras==2.15.0
 kiwisolver==1.4.7
 lazy_loader==0.4
@@ -164,4 +166,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+widgetsnbextension==4.0.13
 wrapt==1.14.1
